# issue-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/core/events/interaction/: mod.rs
src/util/: config.rs
