[package]
name = "issue-bot"
version = "1.2.2"
edition = "2021"

[dependencies]
bitflags = { version = "1.0" }
clap = { version = "4.5.45", default-features = false, features = ["help", "std"]}
command-macros = { path = "./command-macros" }
dotenvy = { version = "0.15" }
enum_dispatch = { version = "0.3.11" }
eyre = { version = "0.6" }
flexmap = { git = "https://github.com/MaxOhn/flexmap" }
futures = { version = "0.3", default-features = false }
lazy_static = { version = "1.0" }
octocrab = { version = "0.19", default-features = false, features = ["rustls"] } # v0.20 requires openssl so we avoid it
radix_trie = { version = "0.2" }
ron = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0" }
time = { version = "0.3", features = ["macros", "parsing"] }
tokio = { version = "1.0", default-features = false, features = ["fs", "io-util", "macros", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "smallvec", "std", "time", "tracing-log"] }
twilight-gateway = { version = "0.15" }
twilight-http = { version = "0.15", default-features = false, features = ["rustls-webpki-roots"] }
twilight-interactions = { version = "0.15", default-features = false, features = ["derive"] }
twilight-model = { version = "0.15", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
